--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,15 @@ services:
     image: nginx:alpine
     container_name: reverse-proxy-gateway
     ports:
-      - "80:80"
+      - "${NGINX_PORT:-80}:${NGINX_PORT:-80}"
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./logs:/var/log/nginx
     restart: unless-stopped
+    # Use host network untuk akses ke services di host atau network lain
+    # Jika services Anda di localhost, uncomment baris berikut:
+    # network_mode: "host"
     networks:
       - gateway-network
 
