--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ NGINX_PORT=80
 WORKER_PROCESSES=auto
 WORKER_CONNECTIONS=1024
 
+# Path Rewrite Configuration
+# Set to 'true' untuk enable automatic path rewriting dan redirect fixing
+# Berguna jika service running di root (/) tapi diakses via subpath (/app1, /app2)
+ENABLE_PATH_REWRITE=true
+
 # ========================================
 # SERVICE CONFIGURATIONS
 # ========================================
